fix: Update CORS settings to allow all origins and correct FastAPI command in configuration

--- a/src-tauri/fastapi-config.json
+++ b/src-tauri/fastapi-config.json
@@ -2,7 +2,7 @@
     "windows": {
         "command": "C:\\Users\\Raunak\\Projects\\JS\\tauri\\trial\\fastapi_backend\\.venv\\Scripts\\fastapi.exe",
         "args": [
-            "dev",
+            "run",
             "C:\\Users\\Raunak\\Projects\\JS\\tauri\\trial\\fastapi_backend\\app"
         ]
     },
